--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint-plugin-node": "11",
     "eslint-plugin-promise": "4",
     "git-commit-msg-linter": "^3.2.6",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.0.1",
     "typescript": "^4.3.5"
   }
 }
