--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/node": "^16.3.3",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
@@ -19,7 +20,9 @@
     "eslint-plugin-promise": "4",
     "git-commit-msg-linter": "^3.2.6",
     "husky": "^7.0.1",
+    "jest": "^27.0.6",
     "lint-staged": "^11.0.1",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
   }
 }
